--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.apk filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.app-release.apk filter=lfs diff=lfs merge=lfs -text
+*app-debut.apk filter=lfs diff=lfs merge=lfs -text
