--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.app-release.apk filter=lfs diff=lfs merge=lfs -text
 *app-debut.apk filter=lfs diff=lfs merge=lfs -text
+build/app/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
+build/app/outputs/apk/release/app-release.apk filter=lfs diff=lfs merge=lfs -text
