--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *app-debut.apk filter=lfs diff=lfs merge=lfs -text
 build/app/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
 build/app/outputs/apk/release/app-release.apk filter=lfs diff=lfs merge=lfs -text
+*build/app/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
