--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 build/app/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
 build/app/outputs/apk/release/app-release.apk filter=lfs diff=lfs merge=lfs -text
 *build/app/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
+.apk filter=lfs diff=lfs merge=lfs -text
